refactor WebSocket (+2 squashed commit)
Squashed commit:

[c5cdfa62] WebSocket use std string as buffer

--- a/native/main/CMakeLists.txt
+++ b/native/main/CMakeLists.txt
@@ -22,6 +22,7 @@ set(SRC_FILES
     bg/Device.cpp
     bg/CommandBuffer.cpp
     bg/Queue.cpp
+    bg/WebSocket.cpp
 )
 
 add_library(zero_main STATIC ${SRC_FILES})
