--- a/projects/vehicle/script/package.json
+++ b/projects/vehicle/script/package.json
@@ -5,6 +5,7 @@
     "flex": "file:../../../script/flex",
     "physics": "file:../../../script/physics",
     "phys": "file:../../../script/phys/declare",
-    "bastard": "file:../../../script/bastard"
+    "bastard": "file:../../../script/bastard",
+    "boot": "file:../../../script/boot/declare"
   }
 }
