--- a/native/main/CMakeLists.txt
+++ b/native/main/CMakeLists.txt
@@ -18,6 +18,7 @@ set(SRC_FILES
     swig/auto/ImageBitmap_wrap.cpp
     swig/auto/Loader_wrap.cpp
     swig/auto/gfx_wrap.cpp
+    swig/auto/WebSocket_wrap.cpp
     swig/auto/Window_wrap.cpp
     bg/Device.cpp
     bg/CommandBuffer.cpp
