--- a/native/main/CMakeLists.txt
+++ b/native/main/CMakeLists.txt
@@ -38,6 +38,9 @@ FetchContent_Declare(json URL https://github.com/nlohmann/json/releases/download
 FetchContent_MakeAvailable(json)
 target_link_libraries(zero_main PRIVATE nlohmann_json::nlohmann_json)
 
+add_subdirectory(../bastard bastard)
+target_link_libraries(zero_main PUBLIC bastard)
+
 add_subdirectory(../../puttyknife/jsb puttyknife)
 target_link_libraries(puttyknife PRIVATE v8)
 target_link_libraries(zero_main PRIVATE puttyknife)
