refactor project vehicle

--- a/projects/vehicle/node/package.json
+++ b/projects/vehicle/node/package.json
@@ -4,7 +4,7 @@
     "ws": "^8.18.1"
   },
   "scripts": {
-    "dev": "tsc -p . --outDir dist --watch",
+    "tsc": "tsc -p . --outDir dist",
     "server": "node ./dist/main.js"
   }
 }
