puttyknife: all in one

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
 node_modules/
 build/
 dist/
-assets/spi.wasm
-assets/yoga.wasm
-assets/phys.wasm
+assets/puttyknife.wasm
 .vscode/c_cpp_properties.json
