--- a/projects/animation/web/package.json
+++ b/projects/animation/web/package.json
@@ -2,16 +2,16 @@
     "type": "module",
     "scripts": {
         "yaml": "rollup -i ../../../script/engine/node_modules/yaml/browser/index.js -o dist/yaml.js",
+        "bastard": "tsc -p ../../../script/bastard --outDir dist/bastard --watch",
         "gfx": "tsc -p ../../../script/gfx/webgl2 --outDir dist/gfx --watch",
         "boot": "tsc -p ../../../script/boot/web --outDir dist/boot --watch",
         "assets": "tsc -p ../../../script/assets --outDir dist/assets --watch",
-        "bastard": "tsc -p ../../../script/bastard --outDir dist/bastard --watch",
         "engine": "tsc -p ../../../script/engine --outDir dist/engine --watch",
-        "puttyknife": "tsc -p ../../../puttyknife/wasm --outDir dist/puttyknife --watch",
-        "yoga": "tsc -p ../../../script/yoga/wasm --outDir dist/yoga --watch",
+        "pk": "tsc -p ../../../puttyknife/wasm --outDir dist/pk --watch",
+        "puttyknife": "tsc -p ../../../script/puttyknife/wasm --outDir dist/puttyknife --watch",
         "flex": "tsc -p ../../../script/flex --outDir dist/flex --watch",
         "script": "tsc -p ../script --outDir dist/script --watch",
         "server": "http-server ../../../ -p 8003 -o projects/animation/web/index.html -c-1",
-        "dev": "concurrently \"npm run gfx\" \"npm run boot\" \"npm run assets\" \"npm run bastard\" \"npm run engine\" \"npm run puttyknife\" \"npm run yoga\" \"npm run flex\" \"npm run script\" \"npm run server\""
+        "dev": "concurrently \"npm run gfx\" \"npm run boot\" \"npm run assets\" \"npm run bastard\" \"npm run engine\" \"npm run pk\" \"npm run puttyknife\" \"npm run flex\" \"npm run script\" \"npm run server\""
     }
 }
