--- a/projects/shadow/web/package.json
+++ b/projects/shadow/web/package.json
@@ -7,11 +7,11 @@
         "boot": "tsc -p ../../../script/boot/web --outDir dist/boot --watch",
         "assets": "tsc -p ../../../script/assets --outDir dist/assets --watch",
         "engine": "tsc -p ../../../script/engine --outDir dist/engine --watch",
-        "puttyknife": "tsc -p ../../../puttyknife/wasm --outDir dist/puttyknife --watch",
-        "yoga": "tsc -p ../../../script/yoga/wasm --outDir dist/yoga --watch",
+        "pk": "tsc -p ../../../puttyknife/wasm --outDir dist/pk --watch",
+        "puttyknife": "tsc -p ../../../script/puttyknife/wasm --outDir dist/puttyknife --watch",
         "flex": "tsc -p ../../../script/flex --outDir dist/flex --watch",
         "script": "tsc -p ../script --outDir dist/script --watch",
         "server": "http-server ../../../ -p 8003 -o projects/shadow/web/index.html -c-1",
-        "dev": "concurrently \"npm run bastard\" \"npm run gfx\" \"npm run boot\" \"npm run assets\" \"npm run engine\" \"npm run puttyknife\" \"npm run yoga\" \"npm run flex\" \"npm run script\" \"npm run server\""
+        "dev": "concurrently \"npm run bastard\" \"npm run gfx\" \"npm run boot\" \"npm run assets\" \"npm run engine\" \"npm run pk\" \"npm run puttyknife\" \"npm run flex\" \"npm run script\" \"npm run server\""
     }
 }
