--- a/projects/skeleton/jsb/package.json
+++ b/projects/skeleton/jsb/package.json
@@ -6,12 +6,10 @@
         "boot": "tsc -p ../../../script/boot/jsb --outDir dist/boot --watch",
         "assets": "tsc -p ../../../script/assets --outDir dist/assets --watch",
         "engine": "tsc -p ../../../script/engine --outDir dist/engine --watch",
-        "puttyknife": "tsc -p ../../../puttyknife/wasm --outDir dist/puttyknife --watch",
-        "yoga": "tsc -p ../../../script/yoga/jsb --outDir dist/yoga --watch",
+        "puttyknife": "tsc -p ../../../script/puttyknife/jsb --outDir dist/puttyknife --watch",
         "flex": "tsc -p ../../../script/flex --outDir dist/flex --watch",
-        "spi": "tsc -p ../../../script/spi/jsb --outDir dist/spi --watch",
         "spine": "tsc -p ../../../script/spine --outDir dist/spine --watch",
         "script": "tsc -p ../script --outDir dist/script --watch",
-        "dev": "concurrently \"npm run gfx\" \"npm run boot\" \"npm run assets\" \"npm run bastard\" \"npm run engine\" \"npm run puttyknife\" \"npm run yoga\" \"npm run flex\" \"npm run spi\"  \"npm run spine\" \"npm run script\""
+        "dev": "concurrently \"npm run gfx\" \"npm run boot\" \"npm run assets\" \"npm run bastard\" \"npm run engine\" \"npm run puttyknife\" \"npm run flex\" \"npm run spine\" \"npm run script\""
     }
 }
