--- a/projects/vehicle/web/package.json
+++ b/projects/vehicle/web/package.json
@@ -7,13 +7,13 @@
         "boot": "tsc -p ../../../script/boot/web --outDir dist/boot --watch",
         "assets": "tsc -p ../../../script/assets --outDir dist/assets --watch",
         "engine": "tsc -p ../../../script/engine --outDir dist/engine --watch",
-        "puttyknife": "tsc -p ../../../puttyknife/wasm --outDir dist/puttyknife --watch",
-        "yoga": "tsc -p ../../../script/yoga/wasm --outDir dist/yoga --watch",
+        "pk": "tsc -p ../../../puttyknife/wasm --outDir dist/pk --watch",
+        "puttyknife": "tsc -p ../../../script/puttyknife/wasm --outDir dist/puttyknife --watch",
         "flex": "tsc -p ../../../script/flex --outDir dist/flex --watch",
         "script": "tsc -p ../script --outDir dist/script --watch",
         "phys": "tsc -p ../../../script/phys/wasm --outDir dist/phys --watch",
         "physics": "tsc -p ../../../script/physics --outDir dist/physics --watch",
         "server": "http-server ../../../ -p 8003 -o projects/vehicle/web/index.html -c-1",
-        "dev": "concurrently \"npm run bastard\" \"npm run boot\" \"npm run gfx\" \"npm run assets\" \"npm run engine\" \"npm run puttyknife\" \"npm run yoga\" \"npm run flex\" \"npm run script\" \"npm run phys\" \"npm run physics\" \"npm run server\""
+        "dev": "concurrently \"npm run bastard\" \"npm run boot\" \"npm run gfx\" \"npm run assets\" \"npm run engine\" \"npm run pk\" \"npm run puttyknife\" \"npm run flex\" \"npm run script\" \"npm run physics\" \"npm run server\""
     }
 }
