--- a/script/puttyknife/wasm/package.json
+++ b/script/puttyknife/wasm/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "spi",
+  "name": "puttyknife",
   "dependencies": {
     "bastard": "file:../../bastard",
     "boot": "file:../../boot/declare",
     "bundling": "file:../../bundling",
-    "puttyknife": "file:../../../puttyknife/wasm",
-    "spi": "file:../declare"
+    "pk": "file:../../../puttyknife/wasm",
+    "puttyknife": "file:../declare"
   }
 }
