--- a/minigame/package.json
+++ b/minigame/package.json
@@ -9,12 +9,10 @@
         "yaml": "rollup --config -i ../script/engine/node_modules/yaml/browser/index.js -f system -o ./dist/subpackages/engine/yaml.js",
         "bastard": "tsc -p ../script/bastard --outDir ./dist/subpackages/engine/bastard --module system --watch",
         "engine": "tsc -p ../script/engine --outDir ./dist/subpackages/engine/script --module system --watch",
-        "puttyknife": "tsc -p ../puttyknife/wasm --outDir ./dist/subpackages/engine/puttyknife --module system --watch",
-        "yoga": "tsc -p ../script/yoga/wasm --outDir ./dist/subpackages/engine/flex/yoga/script --module system --watch",
-        "flex": "tsc -p ../script/flex --outDir ./dist/subpackages/engine/flex/script --module system --watch",
-        "spi": "tsc -p ../script/spi/wasm --outDir ./dist/subpackages/spine/spi/script --module system --watch",
-        "spine": "tsc -p ../script/spine --outDir ./dist/subpackages/spine/script --module system --watch",
-        "phys": "tsc -p ../script/phys/wasm --outDir ./dist/subpackages/physics/phys/script --module system --watch",
+        "pk": "tsc -p ../puttyknife/wasm --outDir ./dist/subpackages/engine/pk --module system --watch",
+        "puttyknife": "tsc -p ../script/puttyknife/wasm --outDir ./dist/subpackages/engine/puttyknife --module system --watch",
+        "flex": "tsc -p ../script/flex --outDir ./dist/subpackages/engine/flex --module system --watch",
+        "spine": "tsc -p ../script/spine --outDir ./dist/subpackages/spine --module system --watch",
         "physics": "tsc -p ../script/physics --outDir ./dist/subpackages/physics --module system --watch",
         "navigation": "tsc -p ../projects/navigation/script --outDir ./dist/subpackages/projects/navigation/script --module system --watch",
         "animation": "tsc -p ../projects/animation/script --outDir ./dist/subpackages/projects/animation/script --module system --watch",
@@ -24,7 +22,7 @@
         "vehicle": "tsc -p ../projects/vehicle/script --outDir ./dist/subpackages/projects/vehicle/script --module system --watch",
         "cutting2d": "tsc -p ../projects/cutting2d/script --outDir ./dist/subpackages/projects/cutting2d/script --module system --watch",
         "instancing": "tsc -p ../projects/instancing/script --outDir ./dist/subpackages/projects/instancing/script --module system --watch",
-        "dev": "concurrently \"npm run gfx\" \"npm run boot\" \"npm run assets\" \"npm run bastard\" \"npm run engine\" \"npm run puttyknife\" \"npm run yoga\" \"npm run flex\"",
+        "dev": "concurrently \"npm run gfx\" \"npm run boot\" \"npm run assets\" \"npm run bastard\" \"npm run engine\" \"npm run pk\" \"npm run puttyknife\" \"npm run flex\"",
         "ins": "npm run boot:ins && node ../minigame-tools/game.js"
     },
     "devDependencies": {
