--- a/puttyknife/forma/CMakeLists.txt
+++ b/puttyknife/forma/CMakeLists.txt
@@ -2,5 +2,5 @@ if(TARGET forma)
     return()
 endif()
 
-add_library(forma STATIC ./vec3.cpp ./quat.cpp ./mat4.cpp)
+add_library(forma STATIC ./vec3.cpp ./quat.cpp ./mat4.cpp ./forma.cpp)
 target_include_directories(forma PUBLIC ./include)
