--- a/puttyknife/samp/CMakeLists.txt
+++ b/puttyknife/samp/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(samp STATIC ./samp.cpp)
+add_library(samp STATIC ./Clip.cpp ./samp.cpp)
 target_include_directories(samp PUBLIC ./include)
 
 add_subdirectory(../forma forma)
