refactor (+2 squashed commit)
Squashed commit:

[cf4e91a0] puttyknife wasm cpy32

[3c7ef1a2] rename ModelPhase.Culling to Fustum

--- a/assets/pipelines/forward-csm-1.yml
+++ b/assets/pipelines/forward-csm-1.yml
@@ -17,7 +17,7 @@ flows:
     stages:
       - name: shadow
         phases:
-          - culling: CSM
+          - frustum: CSM
             pass: shadow
             visibility: ${WORLD}
         framebuffer:
