--- a/assets/pipelines/forward-csm.yml
+++ b/assets/pipelines/forward-csm.yml
@@ -11,7 +11,7 @@ flows:
     stages:
       - name: shadow
         phases:
-          - culling: CSM
+          - frustum: CSM
             pass: shadow
             visibility: ${WORLD}
         framebuffer:
