--- a/projects/pipeline/assets/pipelines/csm1.yml
+++ b/projects/pipeline/assets/pipelines/csm1.yml
@@ -16,7 +16,7 @@ flows:
     stages:
       - name: shadow
         phases:
-          - culling: CSM
+          - frustum: CSM
             pass: shadow
             visibility: ${DEFAULT}
         framebuffer:
