--- a/projects/culling/jsb/package.json
+++ b/projects/culling/jsb/package.json
@@ -1,14 +1,15 @@
 {
     "scripts": {
         "yaml": "rollup -i ../../../script/engine/node_modules/yaml/browser/index.js -o dist/yaml.js",
+        "bastard": "tsc -p ../../../script/bastard --outDir dist/bastard --watch",
         "gfx": "tsc -p ../../../script/gfx/jsb --outDir dist/gfx --watch",
         "boot": "tsc -p ../../../script/boot/jsb --outDir dist/boot --watch",
         "assets": "tsc -p ../../../script/assets --outDir dist/assets --watch",
-        "bastard": "tsc -p ../../../script/bastard --outDir dist/bastard --watch",
         "engine": "tsc -p ../../../script/engine --outDir dist/engine --watch",
-        "yoga": "tsc -p ../../../script/yoga/jsb --outDir dist/yoga --watch",
+        "pk": "tsc -p ../../../puttyknife/jsb --outDir dist/pk --watch",
+        "puttyknife": "tsc -p ../../../script/puttyknife/jsb --outDir dist/puttyknife --watch",
         "flex": "tsc -p ../../../script/flex --outDir dist/flex --watch",
         "script": "tsc -p ../script --outDir dist/script --watch",
-        "dev": "concurrently \"npm run gfx\" \"npm run boot\" \"npm run assets\" \"npm run bastard\" \"npm run engine\" \"npm run yoga\" \"npm run flex\" \"npm run script\""
+        "dev": "concurrently \"npm run gfx\" \"npm run boot\" \"npm run assets\" \"npm run bastard\" \"npm run engine\" \"npm run pk\" \"npm run puttyknife\" \"npm run flex\" \"npm run script\""
     }
 }
