--- a/projects/cutting2d/jsb/package.json
+++ b/projects/cutting2d/jsb/package.json
@@ -6,11 +6,10 @@
         "boot": "tsc -p ../../../script/boot/jsb --outDir dist/boot --watch",
         "assets": "tsc -p ../../../script/assets --outDir dist/assets --watch",
         "engine": "tsc -p ../../../script/engine --outDir dist/engine --watch",
-        "yoga": "tsc -p ../../../script/yoga/jsb --outDir dist/yoga --watch",
+        "pk": "tsc -p ../../../puttyknife/jsb --outDir dist/pk --watch",
+        "puttyknife": "tsc -p ../../../script/puttyknife/jsb --outDir dist/puttyknife --watch",
         "flex": "tsc -p ../../../script/flex --outDir dist/flex --watch",
         "script": "tsc -p ../script --outDir dist/script --watch",
-        "script:ins": "cd ../script && npm ins",
-        "dev": "concurrently \"npm run bastard\" \"npm run gfx\" \"npm run boot\" \"npm run assets\" \"npm run engine\" \"npm run yoga\" \"npm run flex\" \"npm run script\"",
-        "ins": "npm run script:ins && npm run yaml"
+        "dev": "concurrently \"npm run bastard\" \"npm run gfx\" \"npm run boot\" \"npm run assets\" \"npm run engine\" \"npm run pk\" \"npm run puttyknife\" \"npm run flex\" \"npm run script\""
     }
 }
