--- a/projects/vehicle/jsb/package.json
+++ b/projects/vehicle/jsb/package.json
@@ -6,12 +6,12 @@
         "boot": "tsc -p ../../../script/boot/jsb --outDir dist/boot --watch",
         "assets": "tsc -p ../../../script/assets --outDir dist/assets --watch",
         "engine": "tsc -p ../../../script/engine --outDir dist/engine --watch",
-        "puttyknife": "tsc -p ../../../puttyknife/wasm --outDir dist/puttyknife --watch",
-        "yoga": "tsc -p ../../../script/yoga/jsb --outDir dist/yoga --watch",
+        "pk": "tsc -p ../../../puttyknife/jsb --outDir dist/pk --watch",
+        "puttyknife": "tsc -p ../../../script/puttyknife/jsb --outDir dist/puttyknife --watch",
         "flex": "tsc -p ../../../script/flex --outDir dist/flex --watch",
         "phys": "tsc -p ../../../script/phys/wasm --outDir dist/phys --watch",
         "physics": "tsc -p ../../../script/physics --outDir dist/physics --watch",
         "script": "tsc -p ../script --outDir dist/script --watch",
-        "dev": "concurrently \"npm run gfx\" \"npm run boot\" \"npm run assets\" \"npm run bastard\" \"npm run engine\" \"npm run puttyknife\" \"npm run yoga\" \"npm run flex\" \"npm run phys\"  \"npm run physics\" \"npm run script\""
+        "dev": "concurrently \"npm run gfx\" \"npm run boot\" \"npm run assets\" \"npm run bastard\" \"npm run engine\" \"npm run pk\" \"npm run puttyknife\" \"npm run flex\" \"npm run phys\"  \"npm run physics\" \"npm run script\""
     }
 }
